--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 
 header {
     background-color: #2c5034;
-    color: #ecf0f1;
+    color: #030708;
     text-align: center;
     padding: 20px;
 }
@@ -17,7 +17,7 @@ main {
 
 section {
     margin-bottom: 20px;
-    border: 1px solid #bdc3c7;
+    border: 1px solid rgb(0, 48, 22);
     border-radius: 5px;
     padding: 15px;
 }
@@ -42,11 +42,4 @@ footer {
     color: #ecf0f1;
     text-align: center;
     padding: 10px;
-}
-
-/* Estilos Responsivos */
-@media only screen and (max-width: 600px) {
-    main {
-        padding: 10px;
-    }
 }
